Fixed the login/sign not showing on the nav-bar

--- a/resources/menu.css
+++ b/resources/menu.css
@@ -195,3 +195,9 @@ height: 100%;
     display: flex;
     justify-content: space-evenly;
 }
+
+.total {
+    margin-top: 4%;
+    display: flex;
+    justify-content: center;
+}
